package com.github.se.pooltrack.ui.navigation

object NavigationTestTags {
  const val TOP_BAR_TITLE = "TopBarTitle"
  const val GO_BACK_BUTTON = "GoBackButton"
  const val BOTTOM_NAVIGATION_MENU = "BottomNavigationMenu"
  const val HOME_TAB = "HomeTab"
  const val SUBSCRIPTION_TAB = "SubscriptionTab"
  const val HISTORY_TAB = "HistoryTab"
}
